# vote

./: Cargo.toml  README.md
app/: keys.rs  poll.rs  proposalserver.rs  proposalservice.rs  validate.rs  vote.rs  voteserver.rs  votingsite.rs
examples/: test.rs
proposalui/: package.json
src/: lib.rs
src/utils/: dirs.rs  get_address_methods.rs  get_blockheight.rs  mod.rs
src/voting/: mod.rs  poll_genesis.rs  validate_genesis.rs  vote_genesis.rs
ui/proposalui/: index.js  package.json
ui/proposalui/app/: app.ts  import.component.ts  import.service.ts  index.html  proposal.component.ts  proposal.service.ts
ui/voteui/: index.js  package.json
ui/voteui/app/: app.ts  index.html  vote.component.ts  vote.service.ts
ui/voteui/app/css/: style.css
website/: index.js  package.json  tsconfig.json  webpack.config.js
website/app/: app.ts  index.html  removespace.ts  submitprop.html  submitprop.ts  viewprop.html  viewprop.ts  voteprop.html  voteprop.ts
website/app/css/viewprop/css/: style.css
website/app/css/voteprop/css/: style.css
