[package]
authors = ["Safe Exchange Developers <team@safex.io>"]
description = "Decentralized Block chain Omni based voting mechanism - Proof of Stake communication."
documentation = "http://safex.io/safex/latest"
homepage = "http://safex.io"
license = "GPL-3.0"
name = "vote"
readme = "README.md"
repository = "https://github.com/safex/vote"
version = "0.1.0"


[lib]
name = "vote"
src = "src/lib.rs"

[[bin]]
name = "voter"
path = "app/voter.rs"

[[bin]]
name = "poll"
path = "app/poll.rs"

[[bin]]
name = "keys"
path = "app/keys.rs"

[[bin]]
name = "validate"
path = "app/validate.rs"

[[bin]]
name = "proposalservice"
path = "app/proposalservice.rs"

[dependencies]
rustc-serialize = "0.3.18"
hyper = "0.6.16"
iron = "0.3.0"
rand = "0.3.14"
router = "*"

[dependencies.iron-cors]
git = "https://github.com/fxbox/iron-cors"

[dependencies.safex]
git = "https://github.com/safex/safex"

[dependencies.bitcoin]
git = "https://github.com/safex/safex-bitcoin"


[[example]]
name = "test"
path = "examples/test.rs"
